ajuste no filtro

--- a/src/app/home/user.component.html
+++ b/src/app/home/user.component.html
@@ -1,5 +1,5 @@
-<div fxLayout fxLayoutAlign="center center">
-<mat-form-field fxFlex="100%">
+<div class="ui-g-12 ui-fluid">
+<mat-form-field>
   <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
 </mat-form-field>
 </div>
