--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,29 +1,22 @@
-  <mat-card class="example-card" fxLayout="row" fxLayoutAlign="center center">
+  <div class="login-wrapper">
+  <mat-card class="box">
    <mat-card-header>
-     <mat-card-title>Login</mat-card-title>
+     <mat-card-title>Log in</mat-card-title>
    </mat-card-header>
-   <mat-card-content>
      <form class="example-form">
-       <table class="example-full-width" cellspacing="0">
-         <tr>
-           <td>
+       <mat-card-content>
              <mat-form-field class="example-full-width">
-             <input matInput placeholder="User" [(ngModel)]="user" name="user" required>
+             <input matInput placeholder="Username" [(ngModel)]="user" name="user" required>
              </mat-form-field>
-           </td>
-         </tr>
-         <tr>
-         <td><mat-form-field class="example-full-width">
-           <input matInput placeholder="Password" [(ngModel)]="password" type="password" name="password" required>
-         </mat-form-field></td>
-       </tr></table>
-     </form>
-     </mat-card-content>
-   <mat-card-actions>
-     <button mat-raised-button (click)="login()" color="primary">Login</button>
-   </mat-card-actions>
- </mat-card>
 
+           <mat-form-field class="example-full-width">
+           <input matInput placeholder="Password" [(ngModel)]="password" type="password" name="password" required>
+          </mat-form-field>
+       </mat-card-content>
+      <button mat-stroked-button color="accent" class="btn-block" >Log in</button>
+      </form>
+ </mat-card>
+</div>
 
 
 
