--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-  <div class="login-wrapper">
+  <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
   <mat-card class="box">
    <mat-card-header>
      <mat-card-title>Log in</mat-card-title>
