Ajuste na tela de Login
Implementação da tela de Registro

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,11 +6,11 @@
      <form class="example-form">
        <mat-card-content>
              <mat-form-field class="example-full-width">
-             <input matInput placeholder="Username" [(ngModel)]="user" name="user" required>
+             <input matInput placeholder="Username" >
              </mat-form-field>
 
            <mat-form-field class="example-full-width">
-           <input matInput placeholder="Password" [(ngModel)]="password" type="password" name="password" required>
+           <input matInput placeholder="Password">
           </mat-form-field>
        </mat-card-content>
       <button mat-stroked-button color="accent" class="btn-block" >Log in</button>
