--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,10 +10,10 @@
              </mat-form-field>
 
            <mat-form-field class="example-full-width">
-           <input matInput placeholder="Password">
+           <input matInput placeholder="Password" type="password">
           </mat-form-field>
        </mat-card-content>
-      <button mat-stroked-button color="accent" class="btn-block" >Log in</button>
+      <button mat-stroked-button color="accent" class="btn-block" (click)="login()">Log in</button>
       </form>
  </mat-card>
 </div>
