--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -20,16 +20,17 @@
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <mat-label>Choose a role...</mat-label>
-          <mat-select [(ngModel)]="role">
-            <mat-option *ngFor="let role of roles" [value]="role">{{role.state}}
+          <mat-select
+          [(ngModel)]="selectedRoles"
+          (ngModelChane)="selectedRoles" placeholder="Chooise a role..." multiple>
+            <mat-option *ngFor="let role of allroles" [value]="role.value">{{role.viewValue}}
             </mat-option>
           </mat-select>
         </mat-form-field>
 
       </mat-card-content>
 
-      <button mat-stroked-button color="accent" class="btn-block">Register</button>
+      <button mat-stroked-button color="accent" class="btn-block" (click)="register()">Register</button>
 
     </form>
   </mat-card>
