--- a/src/app/home/user.component.html
+++ b/src/app/home/user.component.html
@@ -1,8 +1,10 @@
 
-
-<mat-form-field>
-  <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
+<div fxLayout fxLayoutAlign="center center">
+<mat-form-field fxFlex="40%">
+<input matInput type="text" (keyup)="doFilter($event.target.value)"
+placeholder="Filter">
 </mat-form-field>
+</div>
 
 <table mat-table [dataSource]="dataSource" matSort>
 
@@ -33,7 +35,7 @@
  <ng-container matColumnDef="details">
     <th mat-header-cell *matHeaderCellDef> Details </th>
     <td mat-cell *matCellDef="let element">
-      <button mat-icon-button color="primary" <!--(click)="redirectToDetails(element.id)"--> >
+      <button mat-icon-button color="primary" (click)="redirectToDetails(element.id)" >
           <mat-icon class="mat-18">reorder</mat-icon>
       </button>
     </td>
@@ -42,7 +44,7 @@
   <ng-container matColumnDef="update">
       <th mat-header-cell *matHeaderCellDef> Update </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button color="accent"  <!--(click)="redirectToUpdate(element.id)"--> >
+        <button mat-icon-button color="accent" (click)="redirectToUpdate(element.id)" >
             <mat-icon class="mat-18">system_update</mat-icon>
         </button>
       </td>
@@ -51,7 +53,7 @@
     <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef> Delete </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-icon-button color="warn"  <!--(click)="redirectToDelete(element.id)"--> >
+          <button mat-icon-button color="warn" (click)="redirectToDelete(element.id)" >
               <mat-icon class="mat-18">delete</mat-icon>
           </button>
         </td>
